<resources>
    <string name="app_name">Mappe_2</string>

    <!-- MainActivity -->
    <string name="friendsBtn_text">Friend List</string>
    <string name="friendsBtn_description">Knapp for venne liste</string>

    <string name="newAppointmentBtn_text">Ny Avtale</string>
    <string name="newAppointmentBtn_description">Ny Avtale knapp</string>

    <string name="preferenceBtn_text">Preferanser</string>
    <string name="preferenceBtn_description">Knapp for preferanser</string>

    <string name="sms_permission_message">SMS tillatelse ikke gitt. Du kan ikke sende sms</string>
    <string name="empty_fields_toast">Alle felt må bli fylt ut!</string>

    <string name="notification_channel_name">MyChannel</string>
    <string name="notification_channel_description">Min egendefinerte varslingskanal</string>

    <!-- ContactsActivity -->
    <string name="contactsTextView_text">Dine Kontakter</string>
    <string name="contactsTextView_description">Skjermbilde av kontakter</string>
    <string name="newContactBtn_text">Ny Kontakt</string>
    <string name="newContactBtn_description">Ny kontakt knapp</string>

    <!-- ContactsActivity & AppointmentActivity -->
    <string name="applyChangesBtn_text">Lagre</string>
    <string name="applyChangesBtn_description">Lagre endringer i gjenstand</string>

    <string name="deleteItemBtn_text">Slett</string>
    <string name="deleteItemBtn_description">Slett valgt gjenstand</string>

    <!-- AppointmentActivity -->
    <string name="appointmentTextView_text">Endre Avtale</string>
    <string name="appointmentTextView_description">Skjermbilde for endring av avtale</string>
    <string name="contactTextView_text">Kontakt</string>
    <string name="dateTextView_text">Dato</string>
    <string name="timeTextView_text">Tid</string>
    <string name="contactEditText_description">Endre avtalt kontakt</string>
    <string name="dateEditText_description">Endre dato på avtale</string>
    <string name="timeEditText_description">Endre tid på avtale</string>


    <!-- ContactsActivity -->

    <string name="newContactTitle">Ny kontakt</string>
    <string name="newContactPositiveButtonText">Legg til</string>
    <string name="newContactNegativeButtonText">Avbryt</string>

    <string name="contactdetailsTitle">Oppdater Kontakt Informasjon</string>
    <string name="contactDetailsUpdateText">Oppdater</string>
    <string name="contactdetailsDeleteText">Slett</string>
    <string name="contactDetailsCancelText">Avbryt</string>

    <string name="custom_dialog_hint_firstName">First Name</string>
    <string name="custom_dialog_hint_lastName">Last Name</string>
    <string name="custom_dialog_hint_phoneNumber">12345678</string>

    <!-- appointment_dialog_layout -->
    <string name="custom_dialog_hint_contact">Select Contact</string>
    <string name="custom_dialog_desc_date">Endre dato på Avtalen</string>
    <string name="custom_dialog_desc_time">Endre tid på Avtalen</string>
    <string name="appointmentDetailsTitle">Oppdater Avtale Informasjon</string>
    <string name="appointmentDetailsUpdateText">Oppdater</string>
    <string name="appointmentDetailsDeleteText">Slett Avtale</string>
    <string name="appointmentDetailsCancelText">Avbryt</string>
    <string name="newAppointmentTitle">Ny avtale</string>

    <!-- Preference values -->
    <string name="preference_category_title">Generelle innstillinger</string>

    <string name="sms_service_preference_key">sms-service</string>
    <string name="sms_service_title">Slå på SMS påminnelse</string>
    <string name="sms_service_default_value">false</string>
    <string name="sms_service_toast_message">SMS påminnelse aktivert</string>
    <string name="sms_service_summary">Send sms-påminnelse til venner</string>

    <string name="time_preference_key">time_preference</string>
    <string name="time_preference_default_value">06:00</string>
    <string name="time_preference_summary">Format: hh:mm</string>
    <string name="time_preference_title">Klokkeslett</string>
    <string name="invalid_format_message">Ugyldig tidsformat!</string>

    <string name="sms_message_preference_key">sms-message</string>
    <string name="sms_message_default">Hei! Ville bare påminne deg at vi har en avtale i dag.</string>
    <string name="sms_message_title">SMS-melding</string>
    <string name="sms_message_summary">Skriv inn hvilke melding som skal bli sent</string>


</resources>