<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_category_title">

        <SwitchPreference
            android:defaultValue="@string/sms_service_default_value"
            android:key="@string/sms_service_preference_key"
            android:summary="@string/sms_service_summary"
            android:title="@string/sms_service_title" />

        <EditTextPreference
            android:defaultValue="@string/time_preference_default_value"
            android:key="@string/time_preference_key"
            android:summary="@string/time_preference_summary"
            android:title="@string/time_preference_title" />

        <EditTextPreference
            android:defaultValue="@string/sms_message_default"
            android:key="@string/sms_message_preference_key"
            android:title="@string/sms_message_title"
            android:summary="@string/sms_message_summary"/>

    </PreferenceCategory>

</PreferenceScreen>