<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="32dp">

    <EditText
        android:id="@+id/dialog_firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/custom_dialog_hint_firstName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/custom_dialog_hint_lastName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/dialog_firstName"
        app:layout_constraintStart_toStartOf="@+id/dialog_firstName"
        app:layout_constraintTop_toBottomOf="@+id/dialog_firstName" />

    <EditText
        android:id="@+id/dialog_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/custom_dialog_hint_phoneNumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/dialog_firstName"
        app:layout_constraintStart_toStartOf="@+id/dialog_firstName"
        app:layout_constraintTop_toBottomOf="@+id/dialog_lastName" />

</androidx.constraintlayout.widget.ConstraintLayout>